--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -9,24 +9,59 @@
     tools:showIn="@layout/app_bar_home_screen">
 
     <Button
-        android:id="@+id/start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="356dp"
-        android:layout_marginEnd="148dp"
-        android:layout_marginRight="148dp"
-        android:text="Start Timer"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/ConstructiveTimer"
+        android:layout_width="136dp"
+        android:layout_height="300dp"
+        android:text="Constructive"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/AffTimer"
+        app:layout_constraintEnd_toStartOf="@+id/RebuttalTimer"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="196dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginRight="176dp"
-        android:text="TextView"
+    <Button
+        android:id="@+id/RebuttalTimer"
+        android:layout_width="136dp"
+        android:layout_height="300dp"
+        android:text="Rebuttal"
+        app:layout_constraintEnd_toStartOf="@+id/CXTimer"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/ConstructiveTimer"
+        app:layout_constraintTop_toTopOf="@+id/CXTimer" />
+
+    <Button
+        android:id="@+id/CXTimer"
+        android:layout_width="136dp"
+        android:layout_height="300dp"
+        android:text="CX"
+        app:layout_constraintBottom_toTopOf="@+id/NegTimer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/RebuttalTimer"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/AffTimer"
+        android:layout_width="204dp"
+        android:layout_height="340dp"
+        android:text="Aff Time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/NegTimer"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ConstructiveTimer" />
+
+    <Button
+        android:id="@+id/NegTimer"
+        android:layout_width="204dp"
+        android:layout_height="340dp"
+        android:text="Neg Prep"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/AffTimer"
+        app:layout_constraintTop_toBottomOf="@+id/CXTimer" />
+
+
 </android.support.constraint.ConstraintLayout>
