--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -12,7 +12,7 @@
         android:id="@+id/ConstructiveTimer"
         android:layout_width="136dp"
         android:layout_height="300dp"
-        android:text="Constructive"
+        android:text="@string/Constructive"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/AffTimer"
         app:layout_constraintEnd_toStartOf="@+id/RebuttalTimer"
@@ -24,7 +24,7 @@
         android:id="@+id/RebuttalTimer"
         android:layout_width="136dp"
         android:layout_height="300dp"
-        android:text="Rebuttal"
+        android:text="@string/Rebuttal"
         app:layout_constraintEnd_toStartOf="@+id/CXTimer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ConstructiveTimer"
@@ -34,7 +34,7 @@
         android:id="@+id/CXTimer"
         android:layout_width="136dp"
         android:layout_height="300dp"
-        android:text="CX"
+        android:text="@string/CX"
         app:layout_constraintBottom_toTopOf="@+id/NegTimer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -45,7 +45,8 @@
         android:id="@+id/AffTimer"
         android:layout_width="204dp"
         android:layout_height="340dp"
-        android:text="Aff Time"
+        android:background="@android:color/holo_blue_light"
+        android:text="@string/AffPrep"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/NegTimer"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,7 +57,8 @@
         android:id="@+id/NegTimer"
         android:layout_width="204dp"
         android:layout_height="340dp"
-        android:text="Neg Prep"
+        android:background="@android:color/holo_red_light"
+        android:text="@string/NegPrep"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
