--- a/app/src/main/res/layout/activity_aff_prep.xml
+++ b/app/src/main/res/layout/activity_aff_prep.xml
@@ -11,22 +11,38 @@
         android:id="@+id/timer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="200dp"
-        android:background="@android:color/holo_blue_light"
-        android:text="Start Timer"
-        android:textSize="24sp"
+        android:background="@android:color/transparent"
+        android:textSize="42sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <Button
-        android:id="@+id/set"
+    <EditText
+        android:id="@+id/currenttime"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="Set Time"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="125dp"
+        android:layout_marginLeft="125dp"
+        android:layout_marginEnd="125dp"
+        android:layout_marginRight="125dp"
+        android:background="@null"
+        android:cursorVisible="false"
+        android:elevation="2dp"
+        android:ems="10"
+        android:hint="08:00"
+        android:inputType="time"
+        android:longClickable="false"
+        android:textSize="64sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timer" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.521"
+        tools:text="08:00" />
+
 </android.support.constraint.ConstraintLayout>
