--- a/app/src/main/res/layout/content_home_screen.xml
+++ b/app/src/main/res/layout/content_home_screen.xml
@@ -65,5 +65,22 @@
         app:layout_constraintStart_toEndOf="@+id/AffTimer"
         app:layout_constraintTop_toBottomOf="@+id/CXTimer" />
 
+    <TextView
+        android:id="@+id/afftimeleft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="188dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="@+id/AffTimer"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="@+id/AffTimer"
+        app:layout_constraintTop_toTopOf="@+id/AffTimer" />
+
+    <android.support.constraint.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="afftimeleft,AffTimer" />
+
 
 </android.support.constraint.ConstraintLayout>
