--- a/app/src/main/res/menu/activity_home_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_home_screen_drawer.xml
@@ -5,10 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_hs"
             android:title="High School" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_college"
             android:title="College" />
     </group>
 
